# AGENTIC-AI

chunni/: README.md  applications_status.json  pyproject.toml
chunni/src/chunni/: crew.py  main.py
chunni/src/chunni/config/: agents.yaml  tasks.yaml
